@@ -130,15 +130,14 @@ public class LogMessageIndex {
      * @param scenarioId Scenario ID
      * @return List of log messages for the given scenario ID
      */
-    public List<LogMessage> getByScenarioIdAndPending(String scenarioId) {
+    public List<StepInformationLogMessage> getByScenarioIdAndPending(String scenarioId) {
         return this.index
                 .values()
                 .stream()
-                .filter(m -> m instanceof StepInformationLogMessage
-                        && m.getScenarioId().equals(scenarioId)
-                        && ((StepInformationLogMessage) m).getStatus() == StepInformationLogMessage.Status.PENDING
-                )
-                .collect(Collectors.toList());
+                .filter(StepInformationLogMessage.class::isInstance)
+                .map(StepInformationLogMessage.class::cast)
+                .filter(step -> step.getScenarioId().equals(scenarioId) && step.getStatus() == StepInformationLogMessage.Status.PENDING)
+                .toList();
     }
 
     /**
@@ -147,15 +146,14 @@ public class LogMessageIndex {
      * @param scenarioId Scenario ID
      * @return List of log messages for the given scenario ID
      */
-    public List<LogMessage> getByScenarioIdAndPassed(String scenarioId) {
+    public List<StepInformationLogMessage> getByScenarioIdAndPassed(String scenarioId) {
         return this.index
                 .values()
                 .stream()
-                .filter(m -> m instanceof StepInformationLogMessage
-                        && m.getScenarioId().equals(scenarioId)
-                        && ((StepInformationLogMessage) m).getStatus() == StepInformationLogMessage.Status.PASS
-                )
-                .collect(Collectors.toList());
+                .filter(StepInformationLogMessage.class::isInstance)
+                .map(StepInformationLogMessage.class::cast)
+                .filter(step -> step.getScenarioId().equals(scenarioId) && step.getStatus() == StepInformationLogMessage.Status.PASS)
+                .toList();
     }
 
     /**
@@ -164,14 +162,13 @@ public class LogMessageIndex {
      * @param scenarioId Scenario ID
      * @return List of log messages for the given scenario ID
      */
-    public List<LogMessage> getByScenarioIdAndFailed(String scenarioId) {
+    public List<StepInformationLogMessage> getByScenarioIdAndFailed(String scenarioId) {
         return this.index
                 .values()
                 .stream()
-                .filter(m -> m instanceof StepInformationLogMessage
-                        && m.getScenarioId().equals(scenarioId)
-                        && ((StepInformationLogMessage) m).getStatus() == StepInformationLogMessage.Status.ERROR
-                )
-                .collect(Collectors.toList());
+                .filter(StepInformationLogMessage.class::isInstance)
+                .map(StepInformationLogMessage.class::cast)
+                .filter(step -> step.getScenarioId().equals(scenarioId) && step.getStatus() == StepInformationLogMessage.Status.ERROR)
+                .toList();
     }
 }
